Uses clearfix class and responsive utility classes to solve layout issues

--- a/styles/style.css
+++ b/styles/style.css
@@ -20,3 +20,14 @@
 h1 {
   color: blue;
 }
+
+.circles {
+  max-height: 150px;
+  margin: 0 auto;
+  padding-top: 15px;
+  display: block;
+}
+
+section {
+  text-align: center;
+}
